# hyperion.ngBeta

./: .gitmodules  .travis.yml  CMakeLists.txt  CompileHowto.md
.travis/: Dockerfile.ubuntu  travis_build.sh  travis_deploy.sh  travis_install.sh
assets/webconfig/: index.html
cmake/: FindDebBuilder.cmake  FindRpmBuilder.cmake  packages.cmake
cmake/debian/: postinst  preinst  prerm
cmake/nsis/: hyperion_win32.rc
cmake/rpm/: postinst  preinst  prerm
config/: hyperion.config.json.commented  hyperion.config.json.default
dependencies/: CMakeLists.txt
effects/: candle.py
include/api/: Events.h  JsonAPI.h  JsonCB.h
include/boblightserver/: BoblightServer.h
include/bonjour/: bonjourbrowserwrapper.h
include/db/: AuthTable.h  DBManager.h  InstanceTable.h  MetaTable.h  PluginTable.h  SettingsTable.h
include/effectengine/: EffectEngine.h  EffectFileHandler.h
include/flatbufserver/: FlatBufferConnection.h
include/grabber/: V4L2Grabber.h
include/hyperion/: AuthManager.h  CaptureCont.h  ComponentRegister.h  Grabber.h  GrabberWrapper.h  Hyperion.h  HyperionIManager.h  MessageForwarder.h  PriorityMuxer.h  SettingsManager.h
include/jsonserver/: JsonServer.h
include/leddevice/: LedDeviceFactory.h
include/plugin/: Files.h  HTTPUtils.h  Plugin.h  PluginModule.h  (+3 more)
libsrc/: CMakeLists.txt
libsrc/plugin/: CMakeLists.txt  CallbackThread.cpp  CallbackThread.h  Files.cpp  HTTPUtils.cpp  PDBWrapper.h  Plugin.cpp  Plugin.h  PluginFilesHandler.cpp  PluginModule.cpp  Plugins.cpp
src/: CMakeLists.txt
test/: TestBlackBorderProcessor.cpp  TestImage2LedsMap.cpp
(+118 files in other folders)
